Move description and add hyperlinks

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-merlot
 title: Canning Season
-description: A game made by Raccoon Hands Productions, an immersive learning class at Ball State University. Our goal was to produce a game that focused on cooperative 
-             gameplay while building player interest in the collaborative food preservation process.
+show_downloads: false
