Change url for fork me banner

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-merlot
 title: Canning Season
 show_downloads: false
 github:
-  is_project_page: false
+  repository_url: https://github.com/RaccoonHandsProductions/CanningSeason
